<resources>
    <string name="app_name" translatable="false">Geschenkapp</string>
    <string name="profile_picture">Profilbild</string>
    <string name="share">Teilen</string>
    <string name="back">Zurück</string>

    <!--Home page-->
    <string name="search_hint">Suche nach Personen</string>
    <string name="remainingDays">Tage</string>
    <string name="welcome">Willkommen</string>


    <!-- bottom navigation bar-->
    <string name="home">Home</string>
    <string name="profile">Profil</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_profile_settings">ProfileSettingsActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_giftpage">GiftPageActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--profile-->
    <string name="profile_name">Vorname Nachname</string>
    <string name="profile_date_of_birth">21. Geburtstag am 27.Mai</string>
    <string name="tab_left">Wunschliste</string>
    <string name="tab_center">Events</string>
    <string name="tab_right">Freunde</string>
    <string name="members">Teilnehmer</string>

    <!--profilesettings-->
    <string name="speichern">Speichern</string>
    <string name="firstName">Vorname</string>
    <string name="lastName">Nachname</string>
    <string name="dateOfBirth">Geburtstag</string>
    <string name="darkMode">Darkmode</string>
    <string name="profilePrivacy">Privatsphäre</string>
    <string name="giftPrivacy">Post Sichtbarkeit</string>
    <string name="profilePicture">Profilbild</string>
    <string name="defaultDateOfBirth">2000–01–01</string>
    <string name="defaultEmail">vorname@nachname.de</string>
    <string name="defaultFirstname">Vorname</string>
    <string name="defaultLastname">Nachname</string>
    <string name="uploadPicture"><u>Profilbild ändern</u></string>
    <string name="saved">Gespeichert</string>
    <string name="emailDuplicate">Eingegebene Email existiert bereits. Bitte geben Sie eine andere ein.</string>
    <string name="emptyString">Felder dürfen nicht leer sein</string>
    <string name="successfulSave">Gespeichert</string>
    <string name="logout"><u>Ausloggen</u></string>
    <string name="deleteAccount"><u>Account löschen</u></string>
    <string name="deleteDialogAccount">Möchtest du deinen Account wirklich löschen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>

    <!--giftpage-->
    <string name="giftpage_name_description">Name:</string>
    <string name="giftpage_name">Geschenktitel</string>
    <string name="giftpage_price_description">Preis:</string>
    <string name="giftpage_price">0</string>
    <string name="currency">€</string>
    <string name="giftpage_link_description">Link:</string>
    <string name="giftpage_link">http://xyz.com</string>
    <string name="giftpage_owner_description">Von:</string>
    <string name="giftpage_owner">Vorname</string>
    <string name="giftpage_privacy_description">Sichbarkeit:</string>
    <string name="giftpage_privacy">public</string>
    <string name="giftpage_member_count_description">Anzahl Beteiligte:</string>
    <string name="giftpage_member_count">0</string>
    <string name="join">Teilnehmen</string>
    <string name="leave">Verlassen</string>
    <string name="requested">Angefragt</string>
    <string name="save_changes">Änderungen speichern</string>
    <string name="gift_picture">Bild von Geschenk</string>
    <string name="deleteGift"><u>Geschenkidee löschen</u></string>
    <string name="deleteDialogGift">Möchtest du diese Geschenkidee wirklich löschen?</string>

    <!--loginpage-->
    <string name="login">Anmelden</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="noEmailError">Bitte trage eine E-Mail ein!</string>
    <string name="noPasswordError">Bitte trage ein Passwort ein!</string>
    <string name="wrongCredentials">Ihre E-Mail-Adresse und Ihr Kennwort stimmen nicht überein!</string>
    <string name="defaultEmailLogin" translatable="false">Hans@Müller.de</string>
    <string name="defaultPasswordLogin" translatable="false">password</string>

    <!--comments-->
    <string name="comment">Ich finde diese Idee sehr gut, lasst uns zusammenlegen! rubzoiunwezinw rhegnpuw bzuiz rzjbiwornuzqw  zjnwiz wetzn</string>

    <!--card views-->
    <string name="giftidea">Geschenkidee</string>
    <string name="addFavorite">add Favorite</string>
    <string name="giftfeed_price">0</string>
    <string name="likeCount">0</string>
    <string name="suggestionCount">Vorschläge</string>

    <!--search friend-->
    <string name="searchFriend">Suche Freunde</string>

    <string name="settingsButton">Einstellungen</string>
    <string name="addFriend">Freund hinzufügen</string>
    <string name="floatingActionButton">Floating Action Button</string>
    <string name="gifts">Geschenke</string>

    <!--profile privacy array-->
    <string name="profilePrivacyPublic">öffentlich</string>
    <string name="profilePrivacyHideFeed">Feed verstecken</string>
    <string name="profilePrivacyNameAndProfilePicture">Name und Profilbild</string>
    <string name="profilePrivacyName">Nur Name</string>
    <string name="profilePrivacyHidden">unsichtbar</string>

    <!--post privacy array-->
    <string name="postPrivacyPublic">Öffentlich</string>
    <string name="postPrivacyOnlyFriendsOfOwner">Privat</string>
    <string name="postPrivacyOnlyFriendsOfOwnerHiddenMembers">Privat, versteckte Teilnehmer</string>
    <string name="postPrivacyHidden">Unsichtbar</string>

	<!-- register-->
    <string name="register">Registrieren</string>
    <string name="setDateOfBirth">Geburtsdatum wählen</string>

    <!--internet connection-->
    <string name="no_internet_connection">Keine Internetverbindung</string>
    <string name="connecting">Verbinde</string>

    <!-- notifictations -->
    <string name="notification">Benachrichtigung</string>
    <string name="notification_text">Benachrichtigungstext</string>
    <string name="friends_request">Freundschaftsanfrage</string>
    <string name="gift_join_request">Beitrittsanfrage</string>
    <string name="gift_change">Geschenk aktualisiert</string>
    <string name="gift_deleted">Geschenk entfernt</string>
    <string name="gift_left">Geschenkidee verlassen</string>
    <string name="friends_request_text">möchte mit dir befreundet sein</string>
    <string name="text_for">für</string>
    <string name="text_would_like_to">möchte</string>
    <string name="gift_join_text">beitreten</string>
    <string name="gift_change_text">wurde bearbeitet</string>
    <string name="gift_deleted_text">wurde entfernt</string>
    <string name="text_left">hat</string>
    <string name="text_left2">verlassen</string>
    <string name="button_delete">Entfernen</string>
    <string name="button_accept">Annehmen</string>
    <string name="button_decline">Ablehnen</string>
    <string name="button_deleteAll">Alle entfernen</string>


</resources>
