<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvProfile"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_margin="10dp"
    app:cardElevation="6dp"
    android:backgroundTint="#D3D3D3"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">


        <TextView
            android:id="@+id/tvGiftName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/giftidea"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnUpvote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/addFavorite"
            android:src="@drawable/ic_arrowup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/backgroundDark" />

        <ImageButton
            android:id="@+id/btnDownvote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/addFavorite"
            android:src="@drawable/ic_arrowdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/backgroundDark" />

        <TextView
            android:id="@+id/tvGiftPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giftfeed_price"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnDownvote"
            app:layout_constraintLeft_toRightOf="@+id/tvGiftOwner" />

        <TextView
            android:id="@+id/tvGiftOwner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvVotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/likeCount"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/btnDownvote"
            app:layout_constraintEnd_toEndOf="@id/btnUpvote"
            app:layout_constraintTop_toBottomOf="@id/btnUpvote" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
