<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvNotification"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="6dp"
    android:backgroundTint="#D3D3D3"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">


        <TextView
            android:id="@+id/tvNotification"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:text="@string/notification"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnAccept"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNotificationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notification_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNotification" />

        <ImageButton
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:contentDescription="@string/button_accept"
            android:src="@drawable/ic_accept"
            app:layout_constraintEnd_toStartOf="@+id/btnDecline"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/accept" />

        <ImageButton
            android:id="@+id/btnDecline"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/button_decline"
            android:src="@drawable/ic_decline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/downvote" />

        <ImageButton
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/button_delete"
            android:src="@drawable/ic_remove"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tvNotificationText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/backgroundDark" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
