<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvFriend"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_margin="10dp"
    app:cardElevation="6dp"
    android:backgroundTint="#D3D3D3"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">


        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/profile_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvFeedDateofbirth"
            app:layout_constraintEnd_toStartOf="@+id/btnAddFavourite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnAddFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/addFavorite"
            android:adjustViewBounds="true"
            android:background="@null"
            android:src="@drawable/ic_star"
            app:tint = "@color/backgroundDark"
            app:layout_constraintBottom_toTopOf="@+id/tvCountGifts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFeedDateofbirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_date_of_birth"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tvCountGifts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/suggestionCount"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
